<resources>
    <string name="app_name">Parking</string>
    <string name="parking1_text">Empty</string>
    <string name="parking2_text">Empty</string>
    <string name="parking3_text">Empty</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="license_text"></string>
    <string name="car_brand"></string>
    <string name="owner_name"></string>
    <string name="license_hint">License</string>
    <string name="car_brand_hint">Car Brand</string>
    <string name="owner_name_hint">Owner Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Log In</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="username">Username = user</string>
    <string name="password_text">Password = password</string>
    <string name="about">About</string>

</resources>
