<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">



        <!-- TODO: Update blank fragment layout -->



    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CarParkFragment"
            android:id="@+id/frameLayout">
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            tools:context=".titleFragment">-->

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" android:layout_marginTop="@dimen/margin_wide"
                android:fontFamily="@font/roboto" android:textSize="@dimen/box_text_size" style="@style/whiteBox"
                android:background="@color/colorPrimary" android:id="@+id/textView18"/>

        <TextView
                android:id="@+id/parking2_text"
                style="@style/whiteBox"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@color/holo_blue_dark"
                android:text="@string/parking2_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/parking3_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/parking1_text"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
                android:id="@+id/parking3_text"
                style="@style/whiteBox"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@color/holo_blue_dark"
                android:text="@string/parking3_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/parking2_text"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
                android:id="@+id/parking1_text"
                style="@style/whiteBox"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@color/holo_blue_dark"
                android:text="@string/parking1_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/parking2_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <EditText
                android:id="@+id/license_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/license_hint"
                android:inputType="textPersonName"
                android:text="@string/license_text"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/car_brand_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking2_text" />

        <EditText
                android:id="@+id/car_brand_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/car_brand_hint"
                android:inputType="textPersonName"
                android:text="@string/car_brand"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/name_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/license_edit_text" />

        <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/owner_name_hint"
                android:inputType="textPersonName"
                android:text="@string/owner_name"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/delete_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_brand_edit_text" />

        <Button
                android:id="@+id/update_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/update_button"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

        <Button
                android:id="@+id/delete_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete_button"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/update_button"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
