<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".titleFragment">

        <EditText
                android:id="@+id/username_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="53dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/password_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_editText" />

        <TextView
                android:id="@+id/warningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_editText"
                tools:visibility="gone" />

        <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="162dp"
                android:layout_marginBottom="50dp"
                android:text="@string/login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_editText"
                app:layout_constraintVertical_bias="0.19999999" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
